--- a/MoCA.cbp
+++ b/MoCA.cbp
@@ -5,7 +5,7 @@
 		<Option title="MoCA" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="Wall/;Utils/;MoCToolBox/;Num/;NozzleMoC/;IO/" />
+		<Option virtualFolders="Wall/;Utils/;MoCToolBox/;Num/;NozzleMoC/;IO/;InitialLine/" />
 		<Build>
 			<Target title="Debug">
 				<Option output="bin/Debug/MoCAxi" prefix_auto="1" extension_auto="1" />
@@ -45,6 +45,9 @@
 		</Unit>
 		<Unit filename="include/IsentropicFlowRelations.h">
 			<Option virtualFolder="MoCToolBox/" />
+		</Unit>
+		<Unit filename="include/KliegelLevineBoundaryLine.h">
+			<Option virtualFolder="InitialLine/" />
 		</Unit>
 		<Unit filename="include/MoCToolBox.h">
 			<Option virtualFolder="MoCToolBox/" />
@@ -110,6 +113,9 @@
 		</Unit>
 		<Unit filename="src/IsentropicFlowRelations.cpp">
 			<Option virtualFolder="MoCToolBox/" />
+		</Unit>
+		<Unit filename="src/KliegelLevineBoundaryLine.cpp">
+			<Option virtualFolder="InitialLine/" />
 		</Unit>
 		<Unit filename="src/MoCToolBox.cpp">
 			<Option virtualFolder="MoCToolBox/" />
