--- a/MoCA.cbp
+++ b/MoCA.cbp
@@ -8,7 +8,7 @@
 		<Option virtualFolders="Wall/;Utils/;MoCToolBox/;Num/;NozzleMoC/;IO/;InitialLine/" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/MoCAxi" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/MoCA" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -18,7 +18,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/MoCAxi" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/MoCA" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -154,11 +154,6 @@
 			<Option virtualFolder="Wall/" />
 		</Unit>
 		<Extensions>
-			<code_completion />
-			<envvars />
-			<lib_finder disable_auto="1" />
-			<fortran_project />
-			<debugger />
 			<DoxyBlocks>
 				<comment_style block="0" line="0" />
 				<doxyfile_project />
@@ -168,6 +163,7 @@
 				<doxyfile_dot class_diagrams="1" have_dot="1" />
 				<general />
 			</DoxyBlocks>
+			<lib_finder disable_auto="1" />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
